# DjangoBase

./: Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
mydjangobase/: manage.py
mydjangobase/mydjangobase/: settings.py  urls.py  wsgi.py
mydjangobase/polls/: views.py
src/: manage.py
src/firstdjangoapp/: asgi.py  settings.py  urls.py  wsgi.py
src/polls/: models.py
src/polls/migrations/: 0001_initial.py
